--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
     <option value="">Python</option>
   </select>
   <br>
-  <input type="text" value="jonmircha" readonly disabled>
+  <input type="text" value="JavatoJones" readonly disabled>
   <br>
   <input type="text" placeholder="Escribe tu nombre">
   <br>
